@@ -1,3 +1,13 @@
+2019-10-04  Ross Kirsling  <ross.kirsling@sony.com>
+
+        Socket-based RWI should base64-encode backend commands on client, not server
+        https://bugs.webkit.org/show_bug.cgi?id=202605
+
+        Reviewed by Don Olmstead.
+
+        * UIProcess/socket/RemoteInspectorClient.cpp:
+        (WebKit::RemoteInspectorClient::setBackendCommands):
+
 2019-10-04  Jiewen Tan  <jiewen_tan@apple.com>
 
         Unreviewed, build fix after r250729
